--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,11 +132,11 @@
          <%= link_to item_path(item.id) do %>
          <div class='item-img-content'>
            <%= image_tag item.image, class: "item-img" %>
-           <%# if item.purchase.present? %>
+           <% if item.purchase.present? %>
               <div class='sold-out'>
                 <span>Sold Out!!</span>
              </div>
-           <%# end %>
+           <% end %>
          </div>
          <div class='item-info'>
            <h3 class='item-name'>
@@ -156,9 +156,8 @@
 
     
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-
       <%# 商品がない場合のダミー %>
-      <%# 商品がある場合は表示されないようにしましょう %>
+      <% if items.blank? %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
@@ -176,6 +175,7 @@
         </div>
         <% end %>
       </li>
+      <% end %>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# /商品がない場合のダミー %>
     </ul>
