--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,16 +127,15 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+     <% if item.present? %>
       <% @items.each do |item| %>
         <li class='list'>
          <%= link_to item_path(item.id) do %>
          <div class='item-img-content'>
            <%= image_tag item.image, class: "item-img" %>
-           <% if item.purchase.present? %>
               <div class='sold-out'>
                 <span>Sold Out!!</span>
              </div>
-           <% end %>
          </div>
          <div class='item-info'>
            <h3 class='item-name'>
