--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,17 +127,19 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <% unless @items.empty? %>
       <% @items.each do |item| %>
         <li class='list'>
          <%= link_to item_path(item.id) do %>
          <div class='item-img-content'>
            <%= image_tag item.image, class: "item-img" %>
-             <% if item.present? %>
-              <div class='sold-out'>
-                <span>Sold Out!!</span>
-             </div>
-             <% end %>
+              <% if item.purchase != nil %>
+               <div class='sold-out'>
+                 <span>Sold Out!!</span>
+               </div>
+              <% end %>
          </div>
+
          <div class='item-info'>
            <h3 class='item-name'>
              <%= item.name %>
@@ -150,6 +152,7 @@
              </div>
            </div>
          </div>
+         <% end %>
         </li>
       <% end %>
 
