--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,11 +133,11 @@
          <%= link_to item_path(item.id) do %>
          <div class='item-img-content'>
            <%= image_tag item.image, class: "item-img" %>
-              <% if item.purchase != nil %>
+              <%# if item.purchase != nil %>
                <div class='sold-out'>
                  <span>Sold Out!!</span>
                </div>
-              <% end %>
+              <%# end %>
          </div>
 
          <div class='item-info'>
